updated structure of project page

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -13,19 +13,22 @@
 		<section class="project">
 			<div class="container">
 				<article>
-					<span class="h2">Project Title</span>
+					<span class="h2">Project</span>
 					<h1>
 						<a href="{{ page.project.url }}" target="_blank" title="{{ page.project.title }}" rel="nofollow">{{ page.project.title }}</a>
 					</h1>
-					<span class="h2">Role</span>
+					<span class="h2">Brief description</span>
 					{{ page.content }}
 					<div class="project-meta">
-						<span class="h2">Technologies</span>
+						<span class="h2">Software</span>
 						<p>{{ page.project.tech }}</p>
-						<span class="h2">Agency</span>
-						<p><a title="{{ page.agency.title }}" href="{{ page.agency.url }}" target="_blank" rel="nofollow">{{ page.agency.title }}</a></p>
+						<span class="h2">Authors</span>
+						<p>{{ page.project.authors }}</p>
+						<span class="h2">Journal</span>
+						<p>{{ page.journal.title }}</p>
+						<p>(impact factor: {{ page.journal.impact }})</p>
 						<span class="h2">Year</span>
-						<p>{{ page.agency.year }}</p>
+						<p>{{ page.journal.year }}</p>
 					</div>
 				</article>
 				<aside>
