added new header style (h4) and made minor changes on other styles

--- a/assets/scss/_core.scss
+++ b/assets/scss/_core.scss
@@ -22,11 +22,11 @@ h1,
 }
 
 h2,
-.h2 {	
+.h2 {
 	color: $color-silver-chalice;
 	display: block;
 	font-family: $font-lekton;
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-weight: 400;
     letter-spacing: .2rem;
     line-height: 1;
@@ -44,6 +44,21 @@ h3,
     margin: 0;
 }
 
+h4,
+.h4 {
+	color: $color-silver-chalice;
+	display: block;
+	font-family: $font-lekton;
+    font-size: 0.8rem;
+    font-weight: 500;
+    letter-spacing: 0rem;
+    line-height: 0;
+    margin: 0 0 1rem;
+		padding-bottom: 1rem;
+    text-transform: uppercase;
+		text-align: right;
+}
+
 p {
 	margin: 0;
 }
@@ -53,10 +68,15 @@ a {
 	text-decoration: none;
 }
 
+p a {
+	color: $color-tango;
+	text-decoration: none;
+}
+
 ul {
 	margin: 0;
 	padding: 0;
-	list-style-type: none;	
+	list-style-type: none;
 }
 
 img {
@@ -86,7 +106,7 @@ code {
 	border: 1px solid $color-silver-chalice;
 	border-radius: 3px;
 	font-family: $font-lekton;
-	font-size: 1.5rem;	
+	font-size: 1.5rem;
 	padding: .1rem .4rem;
 
 	var {
@@ -99,7 +119,7 @@ dl {
 
 	dt,
 	dd {
-		font-family: $font-lekton;		
+		font-family: $font-lekton;
 	}
 
 	dt {
@@ -113,9 +133,9 @@ dl {
 
 .responsive-table {
 	margin-bottom: 3rem;
-	
+
 	@media (max-width: $breakpoint-xsmall) {
-		display: block;	
+		display: block;
 		overflow-x: scroll;
 		max-width: $breakpoint-xsmall;
 
@@ -127,7 +147,7 @@ dl {
 }
 
 table {
-	border-collapse: collapse;	
+	border-collapse: collapse;
 	width: 100%;
 
 	thead {
@@ -137,7 +157,7 @@ table {
 		}
 	}
 
-	tbody > tr:nth-child(odd) > td, 
+	tbody > tr:nth-child(odd) > td,
 	tbody > tr:nth-child(odd) > th {
 		background: $color-white-sand;
 	}
