fixed font sizes

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -9,11 +9,17 @@
 .header {
 	background: $color-white;
 	padding: 3rem 0;
+
+	h2 {
+		margin: 0.3rem 0 0;
+		font-size: 1.3rem;
+	}
+
 }
 
 .logo {
 	float: left;
-	font-size: 1.8rem;
+	font-size: 2.2rem;
 	font-weight: 600;
 	margin: 0;
 	line-height: 1;
@@ -37,7 +43,7 @@
 	z-index: 1;
 
 	@media (min-width: $breakpoint-medium) {
-		padding: 21rem 0 0;
+		padding: 0 0 0;
 		margin-bottom: 23.42rem;
 	}
 }
@@ -48,9 +54,11 @@
 }
 
 .intro {
+	margin-top: 3rem;
+
 	@media (min-width: $breakpoint-medium) {
 		p {
-			font-size: 2.7rem;
+			font-size: 2.2rem;
 			max-width: 66.66666%;
 		}
 	}
@@ -108,12 +116,13 @@
 			content: "View Project";
 			color: $color-white;
 			@extend .h2;
+			font-size: 1.2rem;
 			font-weight: 800;
 			position: absolute;
 			top: 50%;
 			left: 50%;
 			margin-top: -.5rem;
-			margin-left: -4.4rem;
+			margin-left: -5rem;
 			opacity: 0;
 			-webkit-transition: all .5s ease-in-out;
     		transition: all .5s ease-in-out;
@@ -145,6 +154,11 @@
 	span {
 		margin: 0.6rem 0 .2rem;
 	}
+
+	.h2 {
+		font-size: 1.3rem;
+		font-weight: 600;
+	}
 }
 
 .project {
@@ -153,7 +167,6 @@
 	top: 0;
 
 	@media (min-width: $breakpoint-medium) {
-		margin-top: -21rem;
 
 		.article-wrapper {
 			position: absolute;
