added credentials on header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,4 +4,7 @@
 			<a title="{{ site.author }}" href="{{ site.baseurl | append: "/" }}">{{ site.author }}</a>
 		</h1>
 	</div>
+	<div class="container">
+		<h2>Ph.D. candidate at University of Minnesota</h2>
+	</div>
 </header>
