--- a/assets/scss/_core.scss
+++ b/assets/scss/_core.scss
@@ -68,6 +68,16 @@ a {
 	text-decoration: none;
 }
 
+.a2 {
+	color: $color-silver-chalice;
+	font-family: $font-lekton;
+    font-size: 1.2rem;
+    font-weight: 500;
+    letter-spacing: 0rem;
+    line-height: 0;
+    text-transform: uppercase;
+}
+
 p a {
 	color: $color-tango;
 	text-decoration: none;
