keep image size constant in very big screens

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -179,6 +179,14 @@
 
 	.container {
 		max-width: 100%;
+
+		@media (min-width: $breakpoint-xlarge) {
+			display: block;
+			margin: 0 auto;
+			max-width: 70em;
+			padding: 0 3rem;
+		}
+
 	}
 
 	article {
