--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -15,13 +15,15 @@
 				<article>
 					<span class="h2">Project</span>
 					<h1>
-						<a href="{{ page.project.url }}" target="_blank" title="{{ page.project.title }}" rel="nofollow">{{ page.project.title }}</a>
+						<a>{{ page.project.title }}</a>
 					</h1>
 					<span class="h2">Brief description</span>
 					{{ page.content }}
 					<div class="project-meta">
 						<span class="h2">Software</span>
 						<p>{{ page.project.tech }}</p>
+						<span class="h2">Manuscript</span>
+						<p>{{ page.project.paper }}<a href="{{ page.project.url }}"> (doi: {{ page.project.doi }}) </a></p>
 						<span class="h2">Authors</span>
 						<p>{{ page.project.authors }}</p>
 						<span class="h2">Journal</span>
