--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -13,6 +13,7 @@ $color-black: #000;
 $color-silver-chalice: #aaa;
 $color-alabaster: #fafafa;
 $color-tango: #f46f25;
+$color-green: #2e8b57;
 $color-white-sand: #f6f6f6;
 
 /* Breakpoint
