added contact info on page

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -19,6 +19,14 @@
 					</h1>
 					<span class="h2">Bio</span>
 					{{ page.content }}
+					<div class="project-meta">
+						<span class="h2">Connect with me!</span>
+						<p>Linkedin: <a href="{{ site.linkedin }}">rafael-della-coletta</a></p>
+						<p>Twitter: <a href="{{ site.twitter }}">@rafael_coletta</a></p>
+						<span class="h2">Check out my work</span>
+						<p><a href="{{ site.scholar }}">Google Scholar</a></p>
+						<p><a href="{{ site.github }}">GitHub</a></p>
+					</div>
 				</article>
 				<aside>
 					<ul>
