--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,9 +8,9 @@
 			<h2>Follow</h2>
 			<ul>
 				<li><a title="Google Scholar" href="{{ site.scholar }}" target="_blank">Google Scholar</a></li>
-				<li><a title="Linkedin" href="{{ site.linkedin }}" target="_blank">Linkedin</a></li>
+				<li><a title="Linkedin" href="{{ site.linkedin }}" target="_blank">LinkedIn</a></li>
 				<li><a title="Twitter" href="{{ site.twitter }}" target="_blank">Twitter</a></li>
-				<li><a title="Github" href="{{ site.github }}" target="_blank">Github</a></li>
+				<li><a title="Github" href="{{ site.github }}" target="_blank">GitHub</a></li>
 			</ul>
 		</section>
 	</div>
