--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -21,8 +21,9 @@
 					{{ page.content }}
 					<div class="project-meta">
 						<span class="h2">Connect with me!</span>
-						<p>Linkedin: <a href="{{ site.linkedin }}">rafael-della-coletta</a></p>
+						<p>LinkedIn: <a href="{{ site.linkedin }}">rafael-della-coletta</a></p>
 						<p>Twitter: <a href="{{ site.twitter }}">@rafael_coletta</a></p>
+						<p>Email: <a href="mailto:{{ site.email }}">della028@umn.edu</a></p>
 						<span class="h2">Check out my work</span>
 						<p><a href="{{ site.scholar }}">Google Scholar</a></p>
 						<p><a href="{{ site.github }}">GitHub</a></p>
